updated apis alll crud
